--- a/mapbox-practice/package.json
+++ b/mapbox-practice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-notes-app",
+  "name": "mapbox-practice",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "mapbox-gl": "^2.6.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuejs-auto-complete": "^0.9.0"
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
